Unnecessarily complicated user control for tile selection

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -408,14 +408,14 @@ $28294 End Sign Sprite Set (128 Tiles)
 $28B0A Title Screen Animated Finger Sprite Set (128 Tiles) 
 $2926B Map Screen 1 Sprite Set (128 Tiles) 
 $29942 Map Screen 2 Sprite Set (128 Tiles) 
-$2A12A Green Hill Sprites (128 tiles) 
-$2AC3D Bridge Sprites (128 tiles) 
-$2B7CD Jungle Sprites (128 tiles) 
-$2C3B6 Labyrinth Sprites (128 tiles) 
-$2CF75 Scrap Brain Sprites (128 tiles) 
-$2D9E0 Sky Base Sprites (128 tiles) 
-$2E511 Special Stage Sprites (128 tiles) 
-$2EEB1 Boss Sprites (128 tiles) 
+$2A12A Green Hill Sprites (128 tileSet) 
+$2AC3D Bridge Sprites (128 tileSet) 
+$2B7CD Jungle Sprites (128 tileSet) 
+$2C3B6 Labyrinth Sprites (128 tileSet) 
+$2CF75 Scrap Brain Sprites (128 tileSet) 
+$2D9E0 Sky Base Sprites (128 tileSet) 
+$2E511 Special Stage Sprites (128 tileSet) 
+$2EEB1 Boss Sprites (128 tileSet) 
 $2F92E HUD Sprite Set (128 Tiles) 
 $2FD70 Ring Animation (20 Tiles), UNCOMPRESSED 
 $2FFF0 EMPTY SPACE 
