--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -457,4 +457,8 @@ $3CF54 Art Data For Special Stages
 $3DA28 Contains sprite art and/or sprite mappings 
 $3FF21 EMPTY SPACE</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="package" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\package.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
