--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -461,4 +461,7 @@ $3FF21 EMPTY SPACE</value>
   <data name="package" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\package.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SolidityImages" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SolidityImages.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
