--- a/Form1.resx
+++ b/Form1.resx
@@ -120,6 +120,27 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>347, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ7SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JUTAFjfGxIWJ
+        xpgQS0KDykcbYYtVNkriVjYmykaLEqDtlLaUFlBSWp6kQ2lnCrSdocXOTOd431DYFDzJyVvMfb+597zb
+        0uESpu2eaKx3LMoc40sp7t6xpVSnOxy/NhB41vpg7kLL/3TXE47rup6SVJ3J5LyiM7GgMVHR2JhPZj2e
+        lQ9XHn251ChvluN1ZLNAFwPpYy+ka2xmTWVqTWf+jMa8Pwrs+svF4UZ5s7rcS6kSAaIZssghGptNqiwt
+        qaygakz9q7OH75bTjfJmcUCZAKt0OUHmID91MbUoY3JuF298O5affkxUHr+PV++/jWy2ufyvrvZ9ungK
+        UAiwTpe5OSRMXUz+zMIEIKl1yOS8YkAsasgpGsZ9Muye2NfWJ9OXT0c4AXDzUbz01/2KiQAzIGzroGww
+        s1aBWjNB2cA7v4cbgwve0xGSks5S8vHJIbztUtXEcsbAsmgg9EfDbPIIW1IFlA0oG/QMBU0LwF/hLED5
+        yMRq1kBixwBlA/9WDb6NKj4nVOzQOPfcIQIMRZlYLjQBJgigHAG/cqblRLaO8LYGP6tZneSUOno5oPOF
+        sMY7yJdpeUoak8q0ULRME99pBAsA/M7Vsb5bR5w6iYg8Dw151YRjlAC3XMFvt12hmM0Z3Gp/Hlw/cbcn
+        TCMASQlIycfnBsFWs0AkA+ubfUQwrac8S93uqH5Q0c8FFKs67EPUwXnqGV1Brlw8F5BXinCMxNAob9bN
+        AWF/TzVA2SBX0kDZgLKxXCAfHNZxZzhYa5Q3q61vcb6tP7hr6/ebNqeg2pwhMj8FtaM/cNjuXMh3DYbL
+        /wDia6MvPCpQQgAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="Image.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -138,7 +159,6 @@
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>242, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="buttonBlockNumbers.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -179,53 +199,53 @@
   <data name="toolStripButtonSaveRenderedLevel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKqSURBVDhPjZLZTxNRGMX7D/lAl8El/hc+GsNW6AIEEJFN
-        0cQHNYJEomGvFsKOIrsdQFNFKFQsGExZSheEUqAr0Cndjt/cKk+EMMnJzczc8ztn5n4STsMXKzR8vVzL
-        m0k+Tjsc5bQ1SU7Lg94xXcufwo3CaVwv4JGeN+G/WcgvyjTjtyTixan5lmVHGMsOAZFYEgIpfJpA4CSO
-        /UAU3lCM3QvRBA6CMTS0DSR1FnvszjPjIacezZZwWoN12R7Goz4PwlEy08acF/PwHcWwT4ZQOM7AQVpd
-        h6fYcEdgsPgwbTkEV8RHCDAVsBDgYc8e2yRKBHiCUfiOYyxZbLBHbWx7EWzsCqjscOLrqh8KdU2SAMNR
-        s+2EAG62SVRurQkeWo8iCUSolf84DrtHTBewtiOgXO9Ar9ENhWocBKhJmjaP8aDbDSdVFLXtPaX0OEs/
-        EhLY8UbPzNadMO6/3ULnzB/I80ZFAI+5NQJ07bLqSkrPqzMh/9UiCkjq+gUo6bn47r9KW9ehMzghzx0h
-        AB3TrDWEqs5t+jYSrVWdLlR1iHKiQu+kRDvKdFsobbehpHUDpW2baB6zQa78mAIYV0MpMyllJBFENJe/
-        c7DK99oJQMa7LeukNbweWocs50MKMLMSILPrn5xn6cxMyWU6GzOXkLG4yYqipt+o61+FLHtQBBjAW/yo
-        1LvYeV9GBW9+4Xn3CqRZ/ZBcpZ84ueRndQU6sqdfsi6UOBOahp940rEEaWYfAfJ5jJt91CAFMG5+vlAi
-        QFX/A4/bzQTogSSd5mBkwUsAx6UbKGsXUN1iQloGTaJUZdga/H6Awdn9c7/3PFU3z6OicQ5pt/VeiUL9
-        6aVCPTkmz5z0KVQTNJ5jbMLkucOQKYfoqN5Dmj1AP6yPKvdSag9LvpLRFUzL7Pr2F+gVD0UPJfhWAAAA
-        AElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKrSURBVDhPjZLZTxNRGMX7D/lAl8El/hc+GsNW6AIEEBEB
+        RRMf1AgSjYZNqoWwiiK7HUBTRShULBhMWUoXhFKgK9Ap0+X4za3yRAiTnNzMzD2/c2buJ+N0fKlKxzco
+        9byVFOD0gyKnr01xeh70julS4QSuFE/ichGPzIKx4NVifl6hG70mky5Oy7csuqJYdAmIxVMQSNHjJEJH
+        CeyGRPgjcXYviEnsheOob+xKGWzO+I3H5n1OO5wr4/Qm+6Izivu9PkRFMtPGvKezCBzEsUuGSDTBwGFa
+        PfvHWPPGYLIFMGnbB1fCxwgwEbIR4F73DtskSQL4wiICh3GWLDXYoTaOnRjWtgVUtbvxdTkIlbY2RYBB
+        0eo4IoCXbZKUX2eBj9aDWBIxahU8TMDpk9IFrGwJqDS60GP2QqUZBQFqU5b1Q9zt8sJNFSVt+o8pPcHS
+        D4Qktvziidm+FcXtNxvomPoDZcGwBOAxs0KAzm1WXU3pBfUWFD6fRxFJ2zAHNT2X3v1XeesqDCY3lPlD
+        BKBjmrZHUN2xSd9GorW6w4Pqdklu3DG6KdGJCsMGytscKGtdQ/nrdTSPOKBUf0wDzMuRtJmUNpIIIpkr
+        37pY5VttBCDjzZZV0gpeDqxCkfchDZhaCpHZ80/uk3RmpuQKg4OZy8hY2mRHSdNv1PctQ5HbLwFM4G1B
+        VBk97LzPo6JXv/CkawnynD7ILtJPHF8IsroCHdmjLzlnSpoJ3YufeNi+AHl2LwEKeYxaA9QgDTCvfz5T
+        EkDT8AMP2qwE6IYsk+ZgaM5PANe5G6jr5lDTYkFGFk2iXGPa6P++h/7p3VO/9zTVNM/iTuMMMq4b/TKV
+        9tMzlXZ8RJk9HlBpxmg8R9iEKfMHoVAP0FG9hzz3Hf2wXqrcQ6ndLPlCVmc4I7vz21+x4g82tgNCogAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <data name="buttonCopyFloor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ7SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JUTAFjfGxIWJ
-        xpgQS0KDykcbYYtVNkriVjYmykaLEqDtlLaUFlBSWp6kQ2lnCrSdocXOTOd431DYFDzJyVvMfb+597zb
-        0uESpu2eaKx3LMoc40sp7t6xpVSnOxy/NhB41vpg7kLL/3TXE47rup6SVJ3J5LyiM7GgMVHR2JhPZj2e
-        lQ9XHn251ChvluN1ZLNAFwPpYy+ka2xmTWVqTWf+jMa8Pwrs+svF4UZ5s7rcS6kSAaIZssghGptNqiwt
-        qaygakz9q7OH75bTjfJmcUCZAKt0OUHmID91MbUoY3JuF298O5affkxUHr+PV++/jWy2ufyvrvZ9ungK
-        UAiwTpe5OSRMXUz+zMIEIKl1yOS8YkAsasgpGsZ9Muye2NfWJ9OXT0c4AXDzUbz01/2KiQAzIGzroGww
-        s1aBWjNB2cA7v4cbgwve0xGSks5S8vHJIbztUtXEcsbAsmgg9EfDbPIIW1IFlA0oG/QMBU0LwF/hLED5
-        yMRq1kBixwBlA/9WDb6NKj4nVOzQOPfcIQIMRZlYLjQBJgigHAG/cqblRLaO8LYGP6tZneSUOno5oPOF
-        sMY7yJdpeUoak8q0ULRME99pBAsA/M7Vsb5bR5w6iYg8Dw151YRjlAC3XMFvt12hmM0Z3Gp/Hlw/cbcn
-        TCMASQlIycfnBsFWs0AkA+ubfUQwrac8S93uqH5Q0c8FFKs67EPUwXnqGV1Brlw8F5BXinCMxNAob9bN
-        AWF/TzVA2SBX0kDZgLKxXCAfHNZxZzhYa5Q3q61vcb6tP7hr6/ebNqeg2pwhMj8FtaM/cNjuXMh3DYbL
-        /wDia6MvPCpQQgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ4SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+kJAAUtwYE2Nc
+        GGNCLIbGj6I0wharbJTErWxMlI0WJf2GtpQWUFJanqRDaWcKtDNDi52ZzvG+obApeJKTt5j7fnPvebet
+        yxmZGXDHE4PjcWafWMxwD44vZnrGoskrI6FH7Xfmz7X9Tzfd0aSu6xlR1ZlELio6E0oaExSNjXsl1u9e
+        /nDp/pcLzfJW2V/HNkp0MZQ9sj9bZ7OrKlPrOgvmNOb5UWJXnwdGm+Wt6h1bzFQIEM+RBQ7R2FxaZVlR
+        ZSVVY+pfnd19t5RtlreKA2QCrNDlFJmDgtTFdEDC1PwO3ni3LT/8mKree5+s3X4b2+hwBl9cHvp0/gSg
+        EGCNLnNzSJS6mPqZhwlAVBuQyEXFgFDWUFA0THglDLgTX9sfzFw8GeEYwM1H8dBf96omQsxAZEsHZYPZ
+        1SrUugnKBh7fLq499XtORkiLOstIRyeH8LYrNRNLOQNLgoGFPxrm0ofYFKugbEDZoN/lMy0Af4XTAPKh
+        iZW8gdS2AcoGwc06vOs1fE6p2KZxbrkCBHDFmSCXWgCTBFAOgV8F03Iq30B0S0OQ1a1OCkoDgxzQ8yyy
+        yjsoyrQ8FY2JMi0ULdPkdxrBAgC/Cw2s7TSQpE5iAs9DQ1E1YeeAG87wt27nQsLmCG92Pg6vHbvPHaUR
+        gLQIZKSjc51gK3kgloP1bcDlN62nPE19Y3F9v6qfCSjXdAJQB2ep/9UyCnL5TEBRKcP+MoFmeauuj0T2
+        dlUDlA0KFQ2UDSgbyyXy/kED3aO+erO8VR1DAV/HcHjHNjxv2hwR1eZYIPMzonYNhw46Hf5i75Oo/A+T
+        cKLruZGbywAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="buttonPasteFloor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ2SURBVDhPfZLbS5NhHMel/8PNi6666KKbrnO6dijnHNgc
-        MXzfbbmVmSEriGgFK8drGKI7hHkYuiwNKXciIoQuighby8OcLrdK5lRoBy+2BvntfZ+dPGQ/+MADz/P9
-        /H7v8z5VpbJTvBMOTQ0OYm2tThWP/LscrbxTNoo/wx0eN57GbtKHndW7BG7t7DhJRHaqxmWjeYpirFIO
-        TXVs+eX13fXZO4gONeDPLy9SC0YCt14blCLm6UDUffm3o5W/U4xVirOvz5qwNmPAyqAEEXsdIjYBSy0i
-        1lqsWs9gaVjO7reTSYqxShHB29v4Nq1DZIrGyjM1whMX9xEaacLyGH204OebW1idpBB2qRAaVZDAQf4r
-        +PH6Bum0PK4kgsVhBZ73UHBatHB2azH6QIORbgPu6SUwGAxMW1sbo9PpGIqiNETw3d+F0NiFQnioEYHH
-        TXgxYEQul0MmkzlEOp3myKvVajMRxLydZMylJ41YcDRgzirDZF8XOej3++Hz+cp4vV7C9vZ2XqVSFQRR
-        91UssuF5NhwckOJT3zlM9HYSwebmJiGRSJTZ2NjA1tZWvrm5uSBYe3UF8/bz+NovxZdHInx8KIGr5xoR
-        7O3q8XjKcAKFQlEQRKYNCPZLSPhzjxAfLGcxZmlHKpXa13UvnEAmkxUFU3oEegvhuW4B3pvr4LyvJ4K9
-        XUu43W4ikEqlrIDmvwu5uAekQ/iplv2VNIIjNMZ7jUgmk4c6x+NxAnsvebFYbK6ya/gSO10T4CYpYdUc
-        h6VLiWw2S6Y4gnx9fb25+Jz2l8lkOtbS0nJTqVQy7EUxcrmcYb+XYUdm2K6MSCRihEIhIxAILv0FftBm
-        RQHbQUIAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ8SURBVDhPfZLdS1NhHMel/yII50VXXXTRTdc5XXOnnHNg
+        c9TqnOPSlZkhKwhpBSvHWaxEt7MwX4YuS0PIvRERQhdFhJn5Ml+Ws/KVSZvzYmuQ3855dpyv9YMPPPA8
+        38/vd57z5G0VT+cfc7MF2MvjC4cT0pGDy30p/4SLlg2Kh3vMJ7EZD2Jj9i5BXHvqjhMRTxd4XUy+Vopt
+        l5s9Mj/Wf2NzYegOou2l+PMrgMS4mSCu59oozPvrEPVd+e2+KNuQYtsl2heGLJgbNGGmTYUIX4SISy5Q
+        iIizELPOU5js0Aj7tWQSKbZdRPC2Ed8GjIj0M5h5bsB07/ldhDvLMdXN/Fvw881tzPbRmPbqEe7SksBe
+        /iv48fom6TTVoyOCiQ4tXthpeGxV8DRVoesBi84mE+7VqGAymbjq6mrOaDRyNE2zRPA91IBw97lsuL0M
+        I0/K8bLVjHQ6jWQyuY/19XWsra1lDAaDlQjmA/VkzMmnZRh3l2LYqUZfcwM5GAqFEAwGcwQCAcLS0lJG
+        r9dnBVHfNUwI4TEhPNpK4VPzGfQ66olgdXWVsLKykmN5eRmLi4uZioqKrGDu1VWM8WfxtYXCl0dKfHyo
+        gtd+nQh2dvX7/TlEgVarzQoiAyaMtqhI+LNdgQ+20+i21SKRSOzquhNRoFarJUF/DUYc2fBwkxzvrUXw
+        3K8hgp1dt/D5fERAUZQgYGTvwl7xARkx/axK+JUMRjsZ9DjMiMfj+zoLl0cQBSUlJdY8npWpeKZgRJxk
+        Cyd7FLYGHVKpFJniIGKxWKa4uNgqPafdZbFYDlVWVt7S6XSccFGcRqPhhO/lhJE5oSunVCo5hULByeXy
+        y38Bmo9luKlDO0YAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
